--- a/style.css
+++ b/style.css
@@ -16,3 +16,35 @@ body
    min-height: 100vh;
    background: #1d2b3a;
 }
+
+.input-Box
+{
+    position: relative;
+    width: 300px;
+}
+
+.input-Box input
+{
+    padding: 15px 20px;
+    border: none;
+    outline: none;
+    width: 100%;
+    background: transparent;
+    border-radius: 5px;
+    color: #fff;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    font-size: 1em;
+}
+
+.input-Box span
+{
+    position: absolute;
+    left: 0;
+    padding: 15px 20px;
+    pointer-events: none;
+    font-size: 1em;
+    transition: 0.5s;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.25);
+    letter-spacing: 0.1em;
+}
